fix-up arrangement & spacing

--- a/callveyor/app/styles/main.scss
+++ b/callveyor/app/styles/main.scss
@@ -20,6 +20,9 @@ $gray-lighter: lighten(#000, 90%);
 .call-in-phone {
     margin-top: auto;
 }
+.call-status {
+    margin-left: 35px;
+}
 
 /* Spacing for header */
 body {
